# agentic-stack

./: .env  .env.example  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
backend/: AGGREGATION_IMPLEMENTATION.md  MIGRATION_GUIDE.md  main.py  monitoring.py  pyproject.toml  requirements.txt  run_analytics_agent.py  run_code_agent.py  run_research_agent.py  test_e2e_simple.py  test_integration.py  test_mcp_curl.sh  test_mcp_integration.py  test_mcp_python_executor.sh  test_research_simple.py
backend/_legacy_backup/agents/: agent_task_manager.py  orchestrator.py
backend/_legacy_backup/mcp_servers/python_executor/: server.py
backend/_legacy_backup/mcp_servers/web_search/: server.py
backend/_legacy_backup/models/: state.py
backend/_legacy_backup/protocols/: a2a_manager.py
backend/_legacy_backup/storage/: __init__.py  context_store.py  redis_config.py
backend/agents/: __init__.py  analytics_agent.py  code_agent.py  orchestrator.py  research_agent.py  run_analytics_agent.py  run_code_agent.py  run_research_agent.py  test_analytics_agent.py  test_analytics_integration.py
backend/agents/analytics_agent/: README.md  __main__.py
backend/agents/code_agent/: __init__.py  __main__.py
backend/agents/research_agent/: __init__.py  __main__.py
backend/mcp_servers/python_executor/: requirements.txt  server.py
backend/mcp_servers/web_search/: Dockerfile  requirements.txt  server.py
backend/models/: __init__.py  state.py
backend/protocols/: __init__.py  a2a_manager.py  ag_ui_handler.py
backend/scripts/: run_analytics_agent.py  run_code_agent.py  run_research_agent.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py
backend/src/api/v1/dependencies/: __init__.py
backend/src/api/v1/endpoints/: __init__.py  ag_ui.py  agents.py  conversations.py  health.py  tasks.py
backend/src/application/: __init__.py
backend/src/application/services/: __init__.py  agent_service.py  conversation_service.py  orchestrator_service.py  task_service.py
backend/src/core/: __init__.py  config.py  logging.py  monitoring.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  agent.py  conversation.py  message.py  task.py
backend/src/domain/events/: __init__.py  agent.py  base.py  conversation.py  task.py
backend/src/domain/exceptions/: __init__.py  agent.py  conversation.py  task.py
backend/src/domain/models/: __init__.py  state.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/agents/: __init__.py  analytics_agent.py  code_agent.py  orchestrator.py  research_agent.py  run_analytics_agent.py
backend/src/infrastructure/mcp/mcp_servers/python_executor/: server.py
backend/src/infrastructure/mcp/mcp_servers/web_search/: server.py
backend/src/infrastructure/persistence/: __init__.py  context_store.py  redis_repository.py
backend/storage/: __init__.py  context_store.py
backend/tests/: test_agent_delegation_simple.py  test_code_execution.py  test_integration_sync.py  test_mcp_integration.py  test_orchestrator_aggregation.py  test_research_agent.py
backend/tests/e2e/: test_e2e_comprehensive.py
backend/tests/integration/: test_agent_delegation.py
backend/tests/unit/: test_aggregation_unit.py  test_code_mcp_simple.py  test_research_simple.py
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: API_KEYS_SETUP.md  DELEGATION_TEST_REPORT.md  E2E_TEST_REPORT.md  MVP_DESIGN.md  REORGANIZATION_SUMMARY.md
frontend/: .env.example  .eslintrc.json  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/chat/: ChatInterface.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx
frontend/components/providers/: CopilotProvider.tsx
frontend/components/visualization/: StateVisualization.tsx
frontend/docs/: copilotkit-integration.md
frontend/lib/: api.ts  utils.ts  websocket.ts
frontend/types/: agent.ts  agui.ts  chat.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
